content edits, cleaning up.

--- a/frontend/docs/65-highlight-elements/java.mdx
+++ b/frontend/docs/65-highlight-elements/java.mdx
@@ -130,9 +130,9 @@ When you save this file and run it (e.g., `mvn clean test` from the command-line
 
 ## Summary
 
-If you wanted to take this a step further, you could leverage this approach along with an interactive debugger. You can read more about how to do that [here in Brian's other guest post](http://elementalselenium.com/tips/14-interactive-prompts-revisited)==**`!! Link needs replacing !!`**==.
+If you wanted to take this a step further, you could leverage this approach along with an interactive debugger.
 
-Alternatively, you could verify your locators by using a browser plugin like FireFinder. You can read more about how to do that [here in this previous tip](http://elementalselenium.com/tips/verifying-locators)==**`!! Link needs replacing !!`**==.
+Alternatively, you could verify your locators by using a browser plugin like FireFinder.
 
 Thanks to [Roman Isko](https://github.com/RomanIsko) for contributing the initial Java code for this tip.
 
