--- a/frontend/docs/0-template/csharp.mdx
+++ b/frontend/docs/0-template/csharp.mdx
@@ -5,6 +5,7 @@ contentUrl: '/docs/0-template/c-sharp'
 sidebar_label: CSharp
 text: 'This is a template.'
 number: 0
+hide_table_of_contents: true
 publish_date: 2023-02-17
 last_update:
   date: 2023-02-24
