--- a/frontend/docs/55-wrapper/ruby.mdx
+++ b/frontend/docs/55-wrapper/ruby.mdx
@@ -60,7 +60,7 @@ To start, let's create a `Wrapper` class that inherits from `AbstractEventListen
 
 The helper methods we're interested in are `after_navigate_to`, `before_find`, `after_find`, `before_click`, and `after_click` and they each require different arguments to be specified. See [here](https://code.google.com/p/selenium/source/browse/rb/lib/selenium/webdriver/support/abstract_event_listener.rb#30) for details.
 
-And to make things interesting, let's wire up [jQuery Growl notifications](http://elementalselenium.com/tips/53-growl)==**`!! Link needs replacing !!`**==.
+And to make things interesting, let's wire up jQuery Growl notifications.
 
 ```ruby
 # filename: wrapper.rb
