--- a/frontend/docs/65-highlight-elements/csharp.mdx
+++ b/frontend/docs/65-highlight-elements/csharp.mdx
@@ -128,9 +128,9 @@ When you save this file and run it (e.g., `nunit3-console.exe .\HighlightElement
 
 ## Summary
 
-If you wanted to take this a step further, you could leverage this approach along with an interactive debugger. You can read more about how to do that [here in Brian's other guest post](http://elementalselenium.com/tips/14-interactive-prompts-revisited)==**`!! Link needs replacing !!`**==.
+If you wanted to take this a step further, you could leverage this approach along with an interactive debugger.
 
-Alternatively, you could verify your locators by using a browser plugin like FireFinder. You can read more about how to do that [here in this previous tip](http://elementalselenium.com/tips/verifying-locators)==**`!! Link needs replacing !!`**==.
+Alternatively, you could verify your locators by using a browser plugin like FireFinder.
 
 Happy Testing!
 
