--- a/frontend/docs/4-work-with-multiple-windows/csharp.mdx
+++ b/frontend/docs/4-work-with-multiple-windows/csharp.mdx
@@ -1,7 +1,7 @@
 ---
-title:'Work With Multiple Windows'
-id: "4-work-with-multiple-windows-csharp"
-contentUrl: "docs/work-with-multiple-windows/4-work-with-multiple-windows-csharp"
+title: 'Work With Multiple Windows'
+id: '4-work-with-multiple-windows-csharp'
+contentUrl: 'docs/work-with-multiple-windows/4-work-with-multiple-windows-csharp'
 sidebar_label: Csharp
 text: "This tip will explain how to work with multiple windows in Selenium and switch between them. Occasionally you'll run into a link or action in the application you're testing that will open a new window."
 number: 4
@@ -10,9 +10,9 @@ publish_date: 2016-06-13
 last_update:
   date: 2023-03-29
 tags:
-  - "windows"
-  - "multiple windows"
-  - "new window"
+  - 'windows'
+  - 'multiple windows'
+  - 'new window'
 level: 2
 category:
   - fundamentals
