Added a second structure for testing

--- a/frontend/docs/dropdown2/main.mdx
+++ b/frontend/docs/dropdown2/main.mdx
@@ -22,4 +22,4 @@ language: ruby
 
 import DropdownMarkdown from '../../src/components/dropdownMarkdown';
 
-<DropdownMarkdown folderName='dropdown' />
+<DropdownMarkdown folderName='dropdown2' />
