--- a/frontend/docs/0-template/csharp.mdx
+++ b/frontend/docs/0-template/csharp.mdx
@@ -44,4 +44,4 @@ template-language: csharp
 
 <!-- Write a short bio, 2-3 sentences and include any links to contact you (LinkedIn, Twitter, website, etc) -->
 
-<!-- ![Author Name profile picture](/img/authors/<author-img> 'a title') -->
+<!-- ![Author Name profile picture](/img/authors/<replace-with-your-img-file-name>#author-img 'a title') -->
