--- a/frontend/docs/71-mobile-testing-pyramid/main.mdx
+++ b/frontend/docs/71-mobile-testing-pyramid/main.mdx
@@ -2,7 +2,7 @@
 title: 'The Mobile Testing Pyramid'
 id: '71-mobile-testing-pyramid'
 contentUrl: 'docs/mobile-testing-pyramid/71-mobile-testing-pyramid'
-sidebar_label: Ruby
+sidebar_label: Mobile Testing Pyramid
 text: 'There are loads of trade-offs when it comes to mobile testing. But by learning to use all layers of the mobile testing pyramid to your advantage you can gain the fast feedback that is required in modern CI/CD environments.'
 number: 71
 hide_table_of_contents: true
