--- a/frontend/docs/73-open-new-window/main.mdx
+++ b/frontend/docs/73-open-new-window/main.mdx
@@ -2,12 +2,12 @@
 title: 'Open a New Window or Tab'
 id: '73-open-new-window'
 contentUrl: 'docs/open-new-window/73-open-new-window'
-sidebar_label: open a new window or tab
+sidebar_label: Open a New Window or Tab
 text: 'Nearly everyone, at some point during their normal flow of work on the computer, has had to open a new window or tab. In fact, many of us often end up with several tabs open. It makes sense that this should be tested using Selenium.'
 number: 73
 hide_table_of_contents: true
 publish_date: 2023-02-17
-last_update: 
+last_update:
   date: 2023-03-15
 tags:
   - 'new window'
