Fixed files URL paths

--- a/frontend/docs/44-exception-handling/main.mdx
+++ b/frontend/docs/44-exception-handling/main.mdx
@@ -2,7 +2,7 @@
 title: 'How To Handle Exceptions'
 id: '44-exception-handling'
 sidebar_label: How To Handle Exceptions
-contentUrl: "docs/exception-handling"
+contentUrl: "docs/exception-handling/44-exception-handling"
 text: "It doesn't take long when using Selenium before you run into errors from Selenium that may seem inexplicable . They can be a bit of a shock if you're not sure what they are, how to handle them, or where to find documentation on how to address them."
 number: 44
 hide_table_of_contents: true
