--- a/frontend/docs/template/main.mdx
+++ b/frontend/docs/template/main.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Template'
 id: 'template'
-contentUrl: '/docs/template/template'
+contentUrl: 'docs/template/template'
 sidebar_label: template
 text: 'This is a template.'
 number: 0
