--- a/frontend/docs/31-archives/main.mdx
+++ b/frontend/docs/31-archives/main.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Accessing Previous Tips Archive'
 id: '31-archives'
-contentUrl: "docs/archives/"
+contentUrl: "docs/archives/31-archives"
 sidebar_label: Accessing Previous Tips Archive
 text: "Let me guess you subscribed to a free, weekly Selenium tip newsletter and aren't sure of how to access
 previously written tips or are unaware that this is even a possibility."
