--- a/frontend/docs/34-css-vs-xpath-3/main.mdx
+++ b/frontend/docs/34-css-vs-xpath-3/main.mdx
@@ -21,21 +21,17 @@ category:
   - 'resources'
 ---
 
-# CSS vs. XPath, Under a Microscope
+# CSS vs. XPath, Conclusion
 
->**NOTE: This is part 2 of 3. For the first installment,
-> [go here](https://elementalselenium.com/docs/css-vs-xpath/32-css-vs-xpath).
-> For the last installment, go [here](https://elementalselenium.com/docs/xpath-vs-css-revisited-2/34-xpath-vs-css-revisited-2).**
+>**NOTE: This is part 3 of 3. For the first installment, [go here](https://elementalselenium.com/docs/css-vs-xpath/32-css-vs-xpath).
+> For the second installment, go [here](https://elementalselenium.com/docs/css-vs-xpath-2/33-css-vs-xpath-2).**
 
 ## Intro
 
-In a previous tip we reviewed [the performance of CSS vs. XPath against Sauce Labs](https://elementalselenium.com/docs/css-vs-xpath/32-css-vs-xpath).
-While it demonstrated that each locator strategy is reasonably equivalent across browsers, it didn't adequately paint
-the whole picture for us.
-
-Given that it was an end-to-end test there were a lot of variables at play -- Sauce startup, browser start up, and
-latency to and from the application under test. The unfortunate takeaway from that experiment could be that one driver
-may be faster than the other (e.g. IE vs Firefox), when in fact, that's not the case at all.
+In [the last tip](https://elementalselenium.com/docs/css-vs-xpath-2/33-css-vs-xpath-2) I provided benchmarks that
+showed XPath and CSS performance across various browsers. Since then I've received feedback on some things that my
+test was missing -- most notably more browser coverage (e.g., Internet Explorer 9 and 10) and testing against a
+larger and deeper page.
 
 import DropdownMarkdown from '../../src/components/dropdownMarkdown';
 
