Adding displayTips.js to show languages in tabs

--- a/frontend/tips/1-how-to-upload-a-file/main.mdx
+++ b/frontend/tips/1-how-to-upload-a-file/main.mdx
@@ -23,10 +23,24 @@ category:
 
 ## Intro
 
-Uploading a file is a common piece of functionality found on the web but when trying to automate it, you get prompted with a dialog box that is just out of reach for Selenium.
+Uploading a file is a common piece of functionality found on the web but when trying to automate it, you get prompted
+with a dialog box that is just out of reach for Selenium.
 
-In these cases people often look to a third-party tool to manipulate this window (e.g., [AutoIt](http://www.toolsqa.com/selenium-webdriver/autoit-selenium-webdriver/)). While this can help solve your short-term need, it sets you up for failure later by chaining you to a specific platform (e.g., AutoIt only works on Windows), effectively limiting your ability to test this functionality on different browser & operating system combinations.
+In these cases people often look to a third-party tool to manipulate this window (e.g., [AutoIt](http://www.toolsqa.com/selenium-webdriver/autoit-selenium-webdriver/)). While this
+can help solve your short-term need, it sets you up for failure later by chaining you to a specific platform (e.g.,
+AutoIt only works on Windows), effectively limiting your ability to test this functionality on different browser &
+operating system combinations.
 
-import DropdownMarkdown from '../../src/components/dropdownMarkdown';
 
-<DropdownMarkdown folderName='1-how-to-upload-a-file' />
+
+
+import DisplayTips from "../../src/components/displayTips";
+const contentLanguages = [
+    { label: 'Python', value: 'python' },
+    { label: 'C#', value: 'csharp' },
+    { label: 'Java', value: 'java' },
+    { label: 'JavaScript', value: 'javascript' },
+    { label: 'Ruby', value: 'ruby' },
+];
+
+<DisplayTips contentPath={"1-how-to-upload-a-file"} languages={contentLanguages} />
