Switching tip 2 to use tabs

--- a/frontend/tips/2-download-a-file/main.mdx
+++ b/frontend/tips/2-download-a-file/main.mdx
@@ -23,9 +23,39 @@ category:
 
 ## Intro
 
-Just like with [uploading files](/docs/how-to-upload-a-file/) we hit the same issue with downloading them -- a dialog box
-just out of Selenium's reach. With some additional configuration, we can side-step the dialog box.
+Just like with [uploading files](/tips/how-to-upload-a-file/1-upload-a-file) we hit the same issue with downloading
+them -- a dialog box just out of Selenium's reach. With some additional configuration, we can side-step the dialog box.
 
-import DropdownMarkdown from '../../src/components/dropdownMarkdown';
+## A Solution
 
-<DropdownMarkdown folderName='2-download-a-file' />
+In order to avoid the dialog box, we will be instructing the browser to download files to a specific location without
+being prompted.
+
+After the file is downloaded we can then perform some simple checks to make sure the file is what we expect.
+
+Let's continue with an example.
+
+
+import DisplayTips from "../../src/components/displayTips";
+const contentLanguages = [
+    { label: 'Python', value: 'python' },
+    { label: 'C#', value: 'csharp' },
+    { label: 'Java', value: 'java' },
+    { label: 'JavaScript', value: 'javascript' },
+    { label: 'Ruby', value: 'ruby' },
+];
+
+<DisplayTips contentPath={"1-how-to-upload-a-file"} languages={contentLanguages} />
+
+
+## About The Author
+
+Dave Haeffner is the original writer of Elemental Selenium -- a free, once weekly Selenium tip newsletter that's read
+by thousands of testing professionals. He also created and maintains the-internet (an open-source web app that's
+perfect for writing automated tests against).
+
+Dave has helped numerous companies successfully implement automated acceptance testing; including The Motley Fool,
+ManTech International, Sittercity, and Animoto. He is also an active member of the Selenium project and has spoken
+at numerous conferences and meetups around the world about automated acceptance testing.
+
+![Dave Haeffner profile picture](/img/authors/dave-haeffner.jpeg#author-img 'a title')
