Switching tip 5 to use tabs

--- a/frontend/tips/5-select-from-a-dropdown/main.mdx
+++ b/frontend/tips/5-select-from-a-dropdown/main.mdx
@@ -21,10 +21,33 @@ category:
 
 ## Intro
 
-Some common use cases for selecting from a dropdown list might be selecting sizes or styles from a dropdown menu while online shopping, or selecting your method of payment. And, while selecting from a dropdown list might *seem* straightforward -- just grab the list by its element and select an item within it, based on the text you want -- there's a bit more skill to it.
+Some common use cases for selecting from a dropdown list might be selecting sizes or styles from a dropdown
+menu while online shopping, or selecting your method of payment. And, while selecting from a dropdown list
+might *seem* straightforward -- just grab the list by its element and select an item within it, based on the
+text you want -- there's a bit more skill to it.
 
 Let's take a look at a couple of different approaches.
 
-import DropdownMarkdown from '../../src/components/dropdownMarkdown';
+import DisplayTips from "../../src/components/displayTips";
+const contentLanguages = [
+    { label: 'Python', value: 'python' },
+    { label: 'C#', value: 'csharp' },
+    { label: 'Java', value: 'java' },
+    { label: 'JavaScript', value: 'javascript' },
+    { label: 'Ruby', value: 'ruby' },
+];
 
-<DropdownMarkdown folderName='5-select-from-a-dropdown' />
+<DisplayTips contentPath={"1-how-to-upload-a-file"} languages={contentLanguages} />
+
+
+## About The Author
+
+Dave Haeffner is the original writer of Elemental Selenium -- a free, once weekly Selenium tip newsletter that's read
+by thousands of testing professionals. He also created and maintains the-internet (an open-source web app that's
+perfect for writing automated tests against).
+
+Dave has helped numerous companies successfully implement automated acceptance testing; including The Motley Fool,
+ManTech International, Sittercity, and Animoto. He is also an active member of the Selenium project and has spoken
+at numerous conferences and meetups around the world about automated acceptance testing.
+
+![Dave Haeffner profile picture](/img/authors/dave-haeffner.jpeg#author-img 'a title')
