Fixing content for tip 2

--- a/frontend/tips/2-download-a-file/main.mdx
+++ b/frontend/tips/2-download-a-file/main.mdx
@@ -45,7 +45,7 @@ const contentLanguages = [
     { label: 'Ruby', value: 'ruby' },
 ];
 
-<DisplayTips contentPath={"1-how-to-upload-a-file"} languages={contentLanguages} />
+<DisplayTips contentPath={"2-download-a-file"} languages={contentLanguages} />
 
 
 ## About The Author
