Fixing content for tip 3

--- a/frontend/tips/3-work-with-frames/main.mdx
+++ b/frontend/tips/3-work-with-frames/main.mdx
@@ -41,7 +41,7 @@ const contentLanguages = [
     { label: 'Ruby', value: 'ruby' },
 ];
 
-<DisplayTips contentPath={"1-how-to-upload-a-file"} languages={contentLanguages} />
+<DisplayTips contentPath={"3-work-with-frames"} languages={contentLanguages} />
 
 
 ## About The Author
