Fixing content for tip 4

--- a/frontend/tips/4-work-with-multiple-windows/main.mdx
+++ b/frontend/tips/4-work-with-multiple-windows/main.mdx
@@ -42,7 +42,7 @@ const contentLanguages = [
     { label: 'Ruby', value: 'ruby' },
 ];
 
-<DisplayTips contentPath={"1-how-to-upload-a-file"} languages={contentLanguages} />
+<DisplayTips contentPath={"4-work-with-multiple-windows"} languages={contentLanguages} />
 
 
 ## About The Author
