Fixing content for tip 5

--- a/frontend/tips/5-select-from-a-dropdown/main.mdx
+++ b/frontend/tips/5-select-from-a-dropdown/main.mdx
@@ -37,7 +37,7 @@ const contentLanguages = [
     { label: 'Ruby', value: 'ruby' },
 ];
 
-<DisplayTips contentPath={"1-how-to-upload-a-file"} languages={contentLanguages} />
+<DisplayTips contentPath={"5-select-from-a-dropdown"} languages={contentLanguages} />
 
 
 ## About The Author
