--- a/frontend/tips/12-opt-out-of-ab-tests/main.mdx
+++ b/frontend/tips/12-opt-out-of-ab-tests/main.mdx
@@ -22,8 +22,56 @@ category:
 
 ## Intro
 
-Occasionally when running tests you may see unexpected behavior due to [A/B testing (a.k.a. split testing)](http://en.wikipedia.org/wiki/A/B_testing) of the application you're working with. In order to keep your tests running without issue we need a clean way to opt-out of these split tests.
+Occasionally when running tests you may see unexpected behavior due to [A/B testing (a.k.a. split testing)](http://en.wikipedia.org/wiki/A/B_testing) of
+the application you're working with. In order to keep your tests running without issue we need a clean way to opt-out
+of these split tests.
 
-import DropdownMarkdown from '../../src/components/dropdownMarkdown';
+## A Solution
 
-<DropdownMarkdown folderName='12-opt-out-of-ab-tests' />
+First, here is a primer on Split Testing.
+
+> ### Split Testing
+>
+> Split testing is a simple way to experiment with an application's features to see which changes lead to higher user
+> engagement. A simple example would be testing variations of an e-mail landing page to see if more people sign up.
+> In such a split test there would be the control (how the application looks and behaves now) and variants (e.g., 2
+> or 3 changes that could include changing text or images on the page, element positioning, color of the submit
+> button, etc).
+>
+> Once the variants are configured, they are put into rotation, and the experiment starts. During this experiment
+> each user will see a different version of the feature and their engagement with it will be tracked. Split tests
+> live for the length of the experiment or until a winner is found (e.g., tracking indicates that a variant converted
+> higher than the control). If no winner is found, new variants may be created and another experiment tried. If a
+> winner is found, then the winning variant becomes the new control and the feature gets updated accordingly.
+
+Thankfully there are some standard opt-out mechanisms built into A/B testing platforms. They tend to come in the
+form of an appended URL or forging a cookie.
+
+Let's start with an example for each approach with a popular A/B testing platform, [Optimizely](https://www.optimizely.com/).
+
+
+
+import DisplayTips from "../../src/components/displayTips";
+const contentLanguages = [
+    { label: 'Python', value: 'python' },
+    { label: 'C#', value: 'csharp' },
+    { label: 'Java', value: 'java' },
+    { label: 'JavaScript', value: 'javascript' },
+    { label: 'Ruby', value: 'ruby' },
+];
+
+<DisplayTips contentPath={"12-opt-out-of-ab-tests"} languages={contentLanguages} />
+
+
+## About The Author
+
+Dave Haeffner is the original writer of Elemental Selenium -- a free, once weekly Selenium tip newsletter that's read
+by thousands of testing professionals. He also created and maintains the-internet (an open-source web app that's
+perfect for writing automated tests against).
+
+Dave has helped numerous companies successfully implement automated acceptance testing; including The Motley Fool,
+ManTech International, Sittercity, and Animoto. He is also an active member of the Selenium project and has spoken
+at numerous conferences and meetups around the world about automated acceptance testing.
+
+![Dave Haeffner profile picture](/img/authors/dave-haeffner.jpeg#author-img 'a title')
+
