--- a/frontend/tips/13-how-to-access-basic-auth/main.mdx
+++ b/frontend/tips/13-how-to-access-basic-auth/main.mdx
@@ -20,14 +20,46 @@ category:
 
 ## Intro
 
-In this guide, you will learn how to pass credentials to a site when requesting a page that is secured behind Basic HTTP Authentication.
+In this guide, you will learn how to pass credentials to a site when requesting a page that is secured behind Basic
+HTTP Authentication.
 
-Sometimes you'll work with applications that are secured behind [Basic HTTP Authentication](http://en.wikipedia.org/wiki/Basic_access_authentication) (a.k.a. Basic Auth). In order to access them you'll need to pass credentials to the site when requesting a page otherwise you'll get a system level pop-up prompting you for a username and password -- rendering Selenium helpless.
+Sometimes you'll work with applications that are secured behind [Basic HTTP Authentication](http://en.wikipedia.org/wiki/Basic_access_authentication) (a.k.a. Basic Auth).
+In order to access them you'll need to pass credentials to the site when requesting a page otherwise you'll get a
+system level pop-up prompting you for a username and password -- rendering Selenium helpless.
 
-Before Selenium 2 we were able to accomplish this by injecting credentials into a custom header, but now a popular way to do it is using something like [BrowserMob Proxy](http://bmp.lightbody.net/). Some people are also solving this issue with browser specific configurations but those methods feel a little heavy and complicated.
+Before Selenium 2 we were able to accomplish this by injecting credentials into a custom header, but now a popular
+way to do it is using something like [BrowserMob Proxy](http://bmp.lightbody.net/). Some people are also solving this issue with browser
+specific configurations but those methods feel a little heavy and complicated.
 
 Instead, let's use a more straightforward approach that is browser agnostic and quick to setup.
 
-import DropdownMarkdown from '../../src/components/dropdownMarkdown';
+## A Solution
 
-<DropdownMarkdown folderName='13-how-to-access-basic-auth' />
+By specifying the username and password _in the URL_ when visiting a page with Selenium, we can a side-step the system
+level dialog box and avoid setting up a proxy server. This approach will work for both HTTP or HTTPS pages.
+
+
+import DisplayTips from "../../src/components/displayTips";
+const contentLanguages = [
+    { label: 'Python', value: 'python' },
+    { label: 'C#', value: 'csharp' },
+    { label: 'Java', value: 'java' },
+    { label: 'JavaScript', value: 'javascript' },
+    { label: 'Ruby', value: 'ruby' },
+];
+
+<DisplayTips contentPath={"13-how-to-access-basic-auth"} languages={contentLanguages} />
+
+
+## About The Author
+
+Dave Haeffner is the original writer of Elemental Selenium -- a free, once weekly Selenium tip newsletter that's read
+by thousands of testing professionals. He also created and maintains the-internet (an open-source web app that's
+perfect for writing automated tests against).
+
+Dave has helped numerous companies successfully implement automated acceptance testing; including The Motley Fool,
+ManTech International, Sittercity, and Animoto. He is also an active member of the Selenium project and has spoken
+at numerous conferences and meetups around the world about automated acceptance testing.
+
+![Dave Haeffner profile picture](/img/authors/dave-haeffner.jpeg#author-img 'a title')
+
